[package]
name = "lodelix"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
panic = 'abort'

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http-body-util = "0.1.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }